@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-05-08T08:10:08Z",
+  "count" : 4,
+  "count_minmax" : [ 4, 4 ],
+  "count_prev_day_inc" : 4,
+  "count_prev_day_dec" : 0,
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 3 ],
+  "uniques_prev_day_inc" : 3,
+  "uniques_prev_day_dec" : 0
+}
