@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T00:36:31Z",
+  "timestamp" : "2022-05-08T08:10:08Z",
   "count_outdated" : 17,
   "uniques_outdated" : 12,
-  "count" : 22,
-  "uniques" : 17,
+  "count" : 26,
+  "uniques" : 20,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
