@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 3,
+  "count": 9,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
