@@ -1,3 +1,9 @@
+2022-05-08T08:10:08Z:
+* notice: last 14d: all unq: 9 6
+* notice: prev accum: outdated-all outdated-unq / all unq: 17 12 / 22 17
+* notice: next accum: outdated-all outdated-unq / all unq: 17 12 / 26 20
+* notice: prev json diff // prev day diff: unq all: +3 +4 / -0 -0 // +3 +4 / -0 -0
+
 2022-04-30T16:09:28Z:
 * notice: last 14d: all unq: 11 6
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 16 12
